--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "rev-path",
-	"version": "2.0.0",
+	"name": "rev-path-v",
+	"version": "0.0.1",
 	"description": "Create a revved file path",
 	"license": "MIT",
 	"repository": "sindresorhus/rev-path",
