--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "rev-path-v",
+	"name": "rev-path-vv",
 	"version": "0.0.1",
 	"description": "Create a revved file path",
 	"license": "MIT",
